traces/bug_333.txt
examples++-load/MUMPS_seq.cpp:302: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/MUMPS_seq.cpp:302:1: initialization of callDoLoadInit
300.   
301.   
302. > LOADFUNC(init22);

examples++-load/MUMPS_seq.cpp:302:1: call to DoLoadInit
300.   
301.   
302. > LOADFUNC(init22);

examples++-load/MUMPS_seq.cpp:302:1: call to addInitFunct
  300.   
  301.   
  302. > LOADFUNC(init22);

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
